kubernetes/apps/hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: hello-world
  type: ClusterIP
